# ricky

./: .env.example  .gitignore  .vscodeignore  CONTEXT.md  HACKATHON.md  README.md  bench-product-spec.md  demo.html  package-lock.json  package.json  patch.py  pyproject.toml  tsconfig.json
bench/: __init__.py  config.py  main.py  schemas.py
bench-demo-workspace/mock-shop/: README.md  __init__.py  auth.py  db.py  payments.py
bench-demo-workspace/src/: cache_profiles_demo.py  demo.py  fibonacci_demo.py  get_students_demo.py  student_enrollment_sync_demo.py  validation_demo.py
bench/clients/: __init__.py  anthropic.py  backboard.py  cerebras.py  gemini.py  types.py
bench/scripts/: __init__.py  check_providers.py  preview_bench.py  thread_reply_demo.py
bench/services/: bench_preview.py  chat_items.py  chat_router.py  (+5 more)
bench_daemon/: __init__.py  app.py  cli.py  executor.py  fixtures.py  models.py  paths.py  state.py
docs/: candidate-evaluation-orchestration-plan.md  candidate-evaluation-request.example.json  chat-to-bench-orchestration-plan.md  local-mvp-handoff-plan.md
scripts/: repro-testall-swap.mjs  reset-demo-workspace.mjs  sync-mock-shop-fixtures.mjs  verify-extension-wiring.mjs  verify-mock-shop-fixtures.sh  verify_all_fixtures.py
src/: extension.ts  types.ts
tests/: README.md  requirements.txt  test_backboard.py  test_cerebras.py  test_cerebras_client.py  test_decision_payload.py  test_events.py  test_feature_options.py  test_feature_preferences.py  test_fixtures.py  test_orchestrator.py  test_ranking.py  test_runner_output.py  test_workspace.py
(+55 files in other folders)
