[project]
name = "bench-workspace"
version = "0.1.0"
description = "Bench hackathon workspace with VS Code extension backend and candidate evaluation daemon"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.69.0",
    "backboard-sdk>=0.1.0",
    "cerebras_cloud_sdk>=1.0.0",
    "fastapi>=0.115.0",
    "httpx>=0.28.0",
    "pydantic-settings>=2.6.0",
    "uvicorn[standard]>=0.34.0",
]

[project.scripts]
bench-daemon = "bench_daemon.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["bench*", "bench_daemon*"]
